# brevia-cookiecutter

./: README.md  cookiecutter.json
.github/workflows/: release.yml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .env  .env.sample  .gitignore  README.md  alembic.ini  docker-compose.yml  log.ini.sample  main.py  pyproject.toml  test_service.yml
