[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.0.1"
description = "{{cookiecutter.project_description}}"
authors = [
  "{{cookiecutter.author_name}} {{cookiecutter.author_email}}"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
brevia = "^0.0.42"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
